[Task] User story 3 - fixed HTTP response status code for user story 1 & 2 - removed unwanted response values for user story 2
